# jgram

./: .flake8  .gitignore  CHANGES.rst  README.md  TODO.md  pyproject.toml
examples/: simple.py  simple_windows.json
jgram/: __init__.py  _types.py  exceptions.py  json.py  loggers.py
jgram/context/: context.py
jgram/loader/: __init__.py  json_loader.py  protocols.py  tools.py
jgram/manager/: __init__.py  filters_factory.py  protocols.py  windows_manager.py
jgram/registry/: filters.py  includer.py  middleware.py  protocols.py  registry.py
jgram/registry/handlers/: start.py  update.py
jgram/storage/: memory.py  protocols.py
jgram/window/: __init__.py  window.py
jgram/window/markup/: __init__.py  markup.py  tools.py
jgram/window/media/: __init__.py  media.py
tests/: __init__.py  test_loader.py  test_manager.py  test_registry.py  test_storage.py  test_window.py
tests/windows/: invalid.json
